<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <artifactId>kadai-adapter-camunda7-parent</artifactId>
  <packaging>pom</packaging>

  <name>${project.groupId}:${project.artifactId}</name>
  <description>This pom is parent to all KadaiAdapter Camunda7-Plugin modules and serves the common build.</description>

  <parent>
    <groupId>io.kadai</groupId>
    <artifactId>kadai-adapter-parent</artifactId>
    <version>11.3.3-SNAPSHOT</version>
    <relativePath>../pom.xml</relativePath>
  </parent>

  <properties>
    <!--  latest supported Java-Version for C7 is 21  -->
    <!--  Although even with Java 25 all tests pass, it's safer to stay compliant here  -->
    <!--  Java 21 LTS was introduced with 7.21, see https://docs.camunda.org/enterprise/announcement/#camunda-platform-7-21   -->
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <version.camunda>7.24.0</version.camunda>
    <version.camunda.spin>1.23.0</version.camunda.spin>
    <version.camunda.template-engines-freemarker>7.24.0
    </version.camunda.template-engines-freemarker>
    <version.camunda.template-engines-velocity>2.1.0</version.camunda.template-engines-velocity>
  </properties>

  <modules>
    <module>camunda-outbox-example-boot</module>
    <module>kadai-adapter-camunda-listener</module>
    <module>kadai-adapter-camunda-listener-example</module>
    <module>kadai-adapter-camunda-outbox-rest</module>
    <module>kadai-adapter-camunda-outbox-rest-spring-boot-starter</module>
    <module>kadai-adapter-camunda-spring-boot-example</module>
    <module>kadai-adapter-camunda-spring-boot-example-oauth2</module>
    <module>kadai-adapter-camunda-spring-boot-test</module>
    <module>kadai-adapter-camunda-system-connector</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.camunda.bpm</groupId>
        <artifactId>camunda-bom</artifactId>
        <version>${version.camunda}</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <repositories>
    <repository>
      <id>camunda-bpm-nexus</id>
      <name>Camunda Maven Repository</name>
      <url>https://artifacts.camunda.com/artifactory/public/</url>
    </repository>
  </repositories>
</project>